Revert "Header section included"

--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
 </head>
   <body>
     <section>
-      <nav>
-        <ul>
-          <li>Home</li>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </nav>
+      Header
     </scetion>
     
       <section>
